@@ -50,10 +50,8 @@ void data_set_state(enum internal_state state){
          break;
       case USER_AT_PROMPT:    
          commands_set_state(VOID, NULL);
-         global_reset_command_line_data();
          DATA_AT_PROMPT = 1;
          global_set_signal_recieved(FALSE);
-         global_set_implicit_enter(0);
 
          break;
       case POST_PROMPT:    
@@ -80,4 +78,10 @@ void data_process(char a, char *buf, int *n, struct Command ***com){
          break; /* do nothing */
      case POST_PROMPT:  break;
    } /* end switch */
+}
+
+char *data_get_prompt(void) {
+    if ( gdb_prompt[0] )
+        return gdb_prompt;
+    return "(tgdb) ";
 }
