@@ -1,3 +1,8 @@
+02/24/2003 Bob Rossi <bob_rossi@cox.net>
+
+    * Fixed interface between cgdb and tgdb: cgdb gets the prompt from 
+    tgdb now instead of guessing its '(gdb) '
+
 02/23/2003 Bob Rossi <bob_rossi@cox.net>
 
     * Major re-write, adding readline support: cgdb now uses the readline
